--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,38 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/normalize.css">
   <title>Palette Picker</title>
 </head>
 
 <body>
+  <header class="header-wrapper">
+    <img class="logo" src="assets/logo.svg"/>
+  </header>
+  <div class="main-wrapper">
+    <section class="color-palette">
+      <div class="color color-one">
+        <img class="lock unlocked" src="assets/unlocked.svg"/>
+        <h3 class="hex-code">#A0D468</h3>
+      </div>
+      <div class="color color-two">
+        <img class="lock unlocked" src="assets/unlocked.svg"/>
+        <h3 class="hex-code">#48CFAD</h3>
+      </div>
+      <div class="color color-three">
+        <img class="lock unlocked" src="assets/unlocked.svg"/>
+        <h3 class="hex-code">#4FC2E9</h3>
+      </div>
+      <div class="color color-four">
+        <img class="lock unlocked" src="assets/unlocked.svg"/>
+        <h3 class="hex-code">#5D9CEC</h3>
+      </div>
+      <div class="color color-five">
+        <img class="lock unlocked" src="assets/unlocked.svg"/>
+        <h3 class="hex-code">#AC92EB</h3>
+      </div>
+    </section>
+  </div>
 
   <script src="js/scripts.js"></script>
 </body>
