Add animate library, and started making generate form

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/normalize.css">
   <title>Palette Picker</title>
 </head>
@@ -16,7 +17,7 @@
     <img class="logo" src="assets/logo.svg"/>
   </header>
   <div class="main-wrapper">
-    <section class="color-palette">
+    <section class="color-palette animated pulse">
       <div class="color color-one">
         <img class="lock unlocked" src="assets/unlocked.svg"/>
         <h3 class="hex-code">#A0D468</h3>
@@ -37,6 +38,11 @@
         <img class="lock unlocked" src="assets/unlocked.svg"/>
         <h3 class="hex-code">#AC92EB</h3>
       </div>
+    </section>
+    <section class="generator">
+      <form></form>
+        <input type="text"/>
+      </form>
     </section>
   </div>
 
