Add css to buttons and created a new section

--- a/public/index.html
+++ b/public/index.html
@@ -39,12 +39,20 @@
         <h3 class="hex-code">#AC92EB</h3>
       </div>
     </section>
-    <section class="generator">
-      <form></form>
-        <input type="text"/>
-      </form>
-    </section>
+    <div class="button-wrapper">
+      <button class="button generate-btn">Generate New Palette</button>
+    </div>
   </div>
+  <section class="palette-creator">
+    <form>
+      <select>
+        <option value="untitled">untitled project</option>
+        <!-- more projects will be added -->
+      </select>
+      <input type="text"/>
+      <input type="submit" value="Save Palette">
+    </form>
+  </section>
 
   <script src="js/scripts.js"></script>
 </body>
