Add start of locking function

--- a/public/index.html
+++ b/public/index.html
@@ -19,23 +19,23 @@
   <div class="main-wrapper">
     <section class="color-palette animated pulse">
       <div class="color color-one">
-        <img class="lock unlocked" src="assets/unlocked.svg"/>
+        <img class="lock" src="assets/unlocked.svg"/>
         <h3 class="hex-code">#A0D468</h3>
       </div>
       <div class="color color-two">
-        <img class="lock unlocked" src="assets/unlocked.svg"/>
+        <img class="lock" src="assets/unlocked.svg"/>
         <h3 class="hex-code">#48CFAD</h3>
       </div>
       <div class="color color-three">
-        <img class="lock unlocked" src="assets/unlocked.svg"/>
+        <img class="lock" src="assets/unlocked.svg"/>
         <h3 class="hex-code">#4FC2E9</h3>
       </div>
       <div class="color color-four">
-        <img class="lock unlocked" src="assets/unlocked.svg"/>
+        <img class="lock" src="assets/unlocked.svg"/>
         <h3 class="hex-code">#5D9CEC</h3>
       </div>
       <div class="color color-five">
-        <img class="lock unlocked" src="assets/unlocked.svg"/>
+        <img class="lock" src="assets/unlocked.svg"/>
         <h3 class="hex-code">#AC92EB</h3>
       </div>
     </section>
