Add populateProjectDropdown functionality

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
       <div class="input-wrapper">
         <h4 class="palette-headline">Create a palette</h4>
       </div>
-      <select class="palette-dropdown">
+      <select class="palette-dropdown" id="project-dropdown">
         <option value="default">Select Project</option>
         <!-- more projects will be added -->
       </select>
