--- a/public/index.html
+++ b/public/index.html
@@ -67,8 +67,8 @@
       </div>
     </form>
   </section>
-  <section class="projects">
-    <div class="projects-wrapper">
+  <section class="projects" id="saved-projects">
+    <!-- <div class="projects-wrapper">
       <h4>Default Project</h4>
       <div class="small-box" style="background-color: #333"></div>
       <div class="small-box" style="background-color: #333"></div>
@@ -85,7 +85,7 @@
       <div class="small-box" style="background-color: #333"></div>
       <div class="small-box" style="background-color: #333"></div>
       <img class="delete" src="../assets/delete.svg" alt="delete">
-    </div>
+    </div> -->
 
   </section>
   
