Add palette saving functionality

--- a/public/index.html
+++ b/public/index.html
@@ -20,23 +20,23 @@
     <section class="color-palette animated pulse">
       <div class="color color-one">
         <img class="lock" src="assets/unlocked.svg" alt="lock"/>
-        <h3 class="hex-code">#A0D468</h3>
+        <h3 class="hex-code one">#A0D468</h3>
       </div>
       <div class="color color-two">
         <img class="lock" src="assets/unlocked.svg" alt="lock"/>
-        <h3 class="hex-code">#48CFAD</h3>
+        <h3 class="hex-code two">#48CFAD</h3>
       </div>
       <div class="color color-three">
         <img class="lock" src="assets/unlocked.svg" alt="lock"/>
-        <h3 class="hex-code">#4FC2E9</h3>
+        <h3 class="hex-code three">#4FC2E9</h3>
       </div>
       <div class="color color-four">
         <img class="lock" src="assets/unlocked.svg" alt="lock"/>
-        <h3 class="hex-code">#5D9CEC</h3>
+        <h3 class="hex-code four">#5D9CEC</h3>
       </div>
       <div class="color color-five">
         <img class="lock" src="assets/unlocked.svg" alt="lock"/>
-        <h3 class="hex-code">#AC92EB</h3>
+        <h3 class="hex-code five">#AC92EB</h3>
       </div>
     </section>
     <div class="button-wrapper">
