--- a/public/index.html
+++ b/public/index.html
@@ -68,15 +68,7 @@
     </form>
   </section>
   <section class="projects" id="saved-projects">
-    <!-- <div class="projects-wrapper">
-      <h4>Default Project</h4>
-      <div class="small-box" style="background-color: #333"></div>
-      <div class="small-box" style="background-color: #333"></div>
-      <div class="small-box" style="background-color: #333"></div>
-      <div class="small-box" style="background-color: #333"></div>
-      <div class="small-box" style="background-color: #333"></div>
-      <img class="delete" src="../assets/delete.svg" alt="delete">
-    </div> -->
+    <!-- projects will be added -->
   </section>
   
   
